# sample-server-demo

./: CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml  cmake.yml  codeql.yml  main.yml
include/: Calc.hxx
src/: Calc.cxx
